# aind-data-access-api

./: .flake8  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish_main.yml  run_dev_tests.yml  run_main_tests.yml  tag_and_publish.yml
doc_template/source/: conf.py
docs/source/: Contributing.rst  ExamplesDocDBDirectConnection.rst  ExamplesDocDBRestApi.rst  Helpers.rst  UserGuide.rst  aind_data_access_api.helpers.rst  aind_data_access_api.rst  conf.py  index.rst  modules.rst
src/aind_data_access_api/: __init__.py  credentials.py  document_db.py  document_db_ssh.py  document_store.py  document_store_ssh.py  helpers.py  models.py  rds_client.py  rds_tables.py  secrets.py  secrets_access.py  utils.py  utils_docdb.py  utils_s3.py
src/aind_data_access_api/examples/: .env.template  sample_queries.py  sample_update.py  utils.py
src/aind_data_access_api/helpers/: __init__.py  data_schema.py  docdb.py
src/aind_data_access_api/util/: data_schema.py  docdb.py
src/aind_library_template/: __init__.py
tests/: test_credentials.py  test_document_db.py  test_document_db_ssh.py  test_document_store.py  test_document_store_ssh.py  test_helpers.py  test_helpers_data_schema.py  test_helpers_docdb.py  test_models.py  test_rds_tables.py  test_secrets_access.py  test_util_data_schema.py  test_util_docdb.py  test_utils.py
tests/helpers/: __init__.py  test_data_schema.py  test_docdb.py
tests/resources/helpers/: quality_control.json  quality_control_invalid.json
tests/resources/utils/: example_metadata.nd.json  example_metadata1.nd.json  example_metadata2.nd.json
